frontend/tests/cases/positive/interfaces/simple/interface-simple-27.gr
interface Id a where
  id1 : a -> a

-- generic instance
instance Id a where
  id1 x = x
